# admin/server/deployment.go
@@ -418,7 +418,7 @@ func (s *Server) CreateDeployment(ctx context.Context, req *adminv1.CreateDeploy
 			DevTTLSeconds:        proj.DevTTLSeconds,
 			Annotations:          proj.Annotations,
 			ChcClusterSize:       proj.ChcClusterSize,
-			RillMinSlots:         proj.RillMinSlots,
+			ClusterSlots:         proj.ClusterSlots,
 			InfraSlots:           proj.InfraSlots,
 		})
 		if err != nil {
